--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,19 @@
 @import "tailwindcss";
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #444;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.swiper-button-next{
+  color: #6d0083;
+}
